교수님코멘트

--- a/MainPage/war/MainPage.html
+++ b/MainPage/war/MainPage.html
@@ -13,6 +13,8 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="MainPage.css">
 	<link id="theme" rel="stylesheet" type="text/css" href="js/ext-2.0.2/resources/css/ext-all.css"/>
+	<link id="theme" rel="stylesheet" type="text/css" href="js/ext-2.0.2/resources/css/xtheme-gray.css"/>
+	
     
     <!--                                           -->
     <!-- Any title is fine                         -->
