광고기능 추가

--- a/MainPage/war/MainPage.html
+++ b/MainPage/war/MainPage.html
@@ -28,7 +28,7 @@
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="mainpage/mainpage.nocache.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src="js/highcharts.js"></script>
+	<script type="text/javascript" src="highchart/highcharts.js"></script>
 	
 	<script src="../js/ext-2.0.2/adapter/ext/ext-base.js"></script> 
 	<script src="../js/ext-2.0.2/ext-all.js"></script>
